--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ eventbrite_embed: '<div style="width:100%; text-align:left;"><iframe src="//even
 timezone: Etc/UTC
 
 # Values for the jekyll-seo-tag gem (https://github.com/jekyll/jekyll-seo-tag)
-logo: /siteicon.png
+logo: # /siteicon.png
 description: A Central Illinois Gravel Event
 author:
   name:
